--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,21 @@ services:
       - postgres_volume:/var/lib/postgresql/data/
     ports:
       - "5432:5432"
+  migration:
+    build: .
+    command: pipenv run alembic upgrade head
+    volumes:
+      - .:/code
+    depends_on:
+      - db
+    environment:
+      - POSTGRES_URI=postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@db:$POSTGRES_PORT/bot
   bot:
     build: .
     command: pipenv run python run.py
     volumes:
       - .:/code
     depends_on:
-      - db
+      - migration
+    environment:
+      - POSTGRES_URI=postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@db:$POSTGRES_PORT/bot
